# trunner

./: .gitignore  CMakeLists.txt  README.md  recources.qrc  trunner.pro
po/: trunner_en_US.qm  trunner_en_US.ts  trunner_ru_RU.qm  trunner_ru_RU.ts
src/: envedit.cpp  envedit.h  main.cpp  mainwindow.cpp  mainwindow.h
tests/: python_cycle_test.py
ui/: envedit.ui  mainwindow.ui
